<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editNameField"
        android:hint="@string/namePrompt"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editCalLabel"
        android:text="@string/caloriePrompt"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/editCalorieField"
        app:layout_constraintBottom_toBottomOf="@id/editCalorieField"
        app:layout_constraintEnd_toStartOf="@id/editCalorieField"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/editCalorieField"
        android:hint="@string/caloriePrompt"
        android:textSize="12sp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/editNameField"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editFatLabel"
        android:text="@string/fatPrompt"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/editFatField"
        app:layout_constraintBottom_toBottomOf="@id/editFatField"
        app:layout_constraintEnd_toStartOf="@id/editFatField"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/editFatField"
        android:hint="@string/fatPrompt"
        android:textSize="12sp"
        android:layout_marginEnd="25dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/editCalorieField"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editCarbLabel"
        android:text="@string/carbPrompt"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/editCarbField"
        app:layout_constraintBottom_toBottomOf="@id/editCarbField"
        app:layout_constraintEnd_toStartOf="@id/editCarbField"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/editCarbField"
        android:hint="@string/carbPrompt"
        android:textSize="12sp"
        android:layout_marginEnd="25dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/editFatField"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editProteinLabel"
        android:text="@string/proteinPrompt"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/editProteinField"
        app:layout_constraintBottom_toBottomOf="@id/editProteinField"
        app:layout_constraintEnd_toStartOf="@id/editProteinField"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/editProteinField"
        android:hint="@string/proteinPrompt"
        android:textSize="12sp"
        android:layout_marginEnd="25dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/editCarbField"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAddMealToTotals"
        android:text="@string/buttonMealAdd"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/editProteinField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDeleteMeal"
        android:text="@string/buttonDelete"
        app:layout_constraintTop_toBottomOf="@id/buttonAddMealToTotals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
        
    
</androidx.constraintlayout.widget.ConstraintLayout>