<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addCalorieLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caloriePrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addCalorieInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addCalorieLabel"
        android:hint="@string/caloriePrompt"
        android:autofillHints="calories"/>

    <TextView
        android:id="@+id/addFatsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fatPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addCalorieInput" />

    <EditText
        android:id="@+id/addFatsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addFatsLabel"
        android:hint="@string/fatPrompt"
        android:autofillHints="fat"/>

    <TextView
        android:id="@+id/addCarbsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addFatsInput" />

    <EditText
        android:id="@+id/addCarbsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addCarbsLabel"
        android:hint="@string/carbPrompt"
        android:autofillHints="carbs"/>

    <TextView
        android:id="@+id/addProteinLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proteinPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addCarbsInput" />

    <EditText
        android:id="@+id/addProteinInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addProteinLabel"
        android:hint="@string/proteinPrompt"
        android:autofillHints="protein"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAddMacros"
        android:text="@string/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addProteinInput"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonViewPresets"
        android:text="View Meal Presets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddMacros"/>

</androidx.constraintlayout.widget.ConstraintLayout>