<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/dayDropDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/setGoalCalorieLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/caloriePrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dayDropDown" />

    <EditText
        android:id="@+id/setGoalCalorieInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setGoalCalorieLabel"
        android:hint="@string/caloriePrompt"
        android:autofillHints="calorieGoal"/>

    <TextView
        android:id="@+id/setGoalFatsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fatPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setGoalCalorieInput" />

    <EditText
        android:id="@+id/setGoalFatsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setGoalFatsLabel"
        android:hint="@string/fatPrompt"
        android:autofillHints="fatGoal"/>

    <TextView
        android:id="@+id/setGoalCarbsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setGoalFatsInput" />

    <EditText
        android:id="@+id/setGoalCarbsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setGoalCarbsLabel"
        android:hint="@string/carbPrompt"
        android:autofillHints="carbGoal"/>

    <TextView
        android:id="@+id/setGoalProteinLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proteinPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setGoalCarbsInput" />

    <EditText
        android:id="@+id/setGoalProteinInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setGoalProteinLabel"
        android:hint="@string/proteinPrompt"
        android:autofillHints="proteinGoal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSetGoals"
        android:text="@string/buttonSetGoals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setGoalProteinInput"/>

</androidx.constraintlayout.widget.ConstraintLayout>